# polymarket-copytrader

./: .gitignore  README.md  analyze_diagnostics.py  memory.md  pyproject.toml
configs/: eval-blue-walnut-last-2d.json  eval-blue-walnut-recent-15m.json  eval-blue-walnut-redeem-10k.json  eval-guh123-1000usdc-final.json  eval-two-accounts-redeem-10k.json  eval-two-accounts-redeem-1k.json  eval-two-accounts.json  live-guh123-1000usdc.json  live-paper-blue-walnut-btc-hourly-alpha-top20-10m.json  live-paper-blue-walnut-btc-hourly-alpha-top20-30m.json  live-paper-guh123-10h-ws-realbook-aggressive-cap-stale-guard-20260322T180000Z.json  live-paper-guh123-10m-ws-realbook-20260322T141109Z.json  live-paper-guh123-10m-ws-realbook-aggressive-cap-20260322T145900Z.json  live-paper-guh123-10m-ws-realbook-aggressive-cap-20260322T165656Z.json  live-paper-guh123-2m-ws-realbook-aggressive-cap-20260322T172814Z.json  live-paper-guh123-2m-ws-realbook-aggressive-cap-stale-guard-20260322T175032Z.json  live-paper-guh123-alpha-3bucket-top20-10m.json  live-paper-guh123-alpha-3bucket-top20-3m.json  live-paper-guh123-alpha-3bucket-top20.json  live-paper-guh123-alpha-4bucket-top20-30m.json  live-paper-guh123-blue-walnut-alpha-combo-top20-10m.json  live-paper-guh123-blue-walnut-alpha-main-10h.json  live-paper-guh123-blue-walnut-alpha-observe-10h.json  live-paper-guh123-btc-hourly-alpha-top20-10m.json  live-paper-guh123-btc-hourly-alpha-top20-30m.json  live-paper-guh123-btc-hourly-alpha-top20.json  live-paper-guh123-btc5m-alpha-top20-2m.json  live-paper-guh123-btc5m-alpha-top20-30m.json  sample.json  (+8 more)
(+53 files in other folders)
